--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <div class="container">
     <div id="profile-container"></div>
     <div id="nav-container"></div>
-    <div id="main-content-pinned"></div>
-    <div id="form-container-pinned"></div>
+    <div id="main-content"></div>
+    <div id="form-container"></div>
     <div id="footer-container"></div>
   </div>
 
